[package]
name = "cosmic-player"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5"
gstreamer-tag = "0.23"
image = "0.24.9"
lazy_static = "1"
serde = { version = "1", features = ["serde_derive"] }
tempfile = "3"
tokio = "1"
url = "2"
# Internationalization
i18n-embed = { version = "0.13", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6"
rust-embed = "6"
# Logging
env_logger = "0.10"
log = "0.4"

[dependencies.iced_video_player]
git = "https://github.com/jackpot51/iced_video_player.git"
branch = "prev-cosmic"
default-features = false

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
branch = "prev-master"
default-features = false
features = ["tokio", "winit"]

[dependencies.mpris-server]
version = "0.8.1"
optional = true

[dependencies.smol_str]
version = "0.2.1"
features = ["serde"]

[features]
default = ["mpris-server", "xdg-portal", "wgpu"]
xdg-portal = ["libcosmic/xdg-portal"]
wgpu = ["iced_video_player/wgpu", "libcosmic/wgpu"]

[profile.release-with-debug]
inherits = "release"
debug = true

# [patch.'https://github.com/jackpot51/iced_video_player']
# iced_video_player = { path = "../../iced_video_player" }

# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }

